大枠を作りました

--- a/制作サイト/index1.html
+++ b/制作サイト/index1.html
@@ -52,11 +52,19 @@
                 </div>
                 <!-- 学習時間３項目と学習時間のグラフのセクション ここまで-->
                 <!-- 学習言語と学習コンテンツのセクション ここから-->
-                <div class="content">
+                <div class="content lang__and__contents__box">
                     <!-- 学習言語のセクション -->
-                    <div class="lang"></div>
+                    <div class="contents__box lang ">
+                        <div class="subheading">学習言語</div>
+                        <div class="pie__chart">棒グラフ</div>
+                        <div class="study__content__list">リスト部分</div>
+                    </div>
                     <!-- 学習コンテンツのセクション -->
-                    <div class="study__contents"></div>
+                    <div class=" contents__box study__contents">
+                        <div class="subheading">学習言語</div>
+                        <div class="pie__chart">棒グラフ</div>
+                        <div class="study__content__list">リスト部分</div>
+                    </div>
                 </div>
                 <!-- 学習言語と学習コンテンツのセクション ここまで-->
             </div>
