微調整をしました

--- a/制作サイト/index1.html
+++ b/制作サイト/index1.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="./style/reset.css">
     <link rel="stylesheet" href="./style/style.css">
 </head>
+<!-- メモ
+    まずは学習時間3項目の意図つの項目を完成させる。
+    そのあとにほかの2つの項目に同様のCSSをきかせるあげればいい
+
+
+-->
 <body>
     <!-- ヘッダーここから---------------------------------------------------------------------------- -->
     <header class="site-header">
@@ -60,19 +66,25 @@
                     <!-- 学習時間３項目 -->
                     <div class="study__hour">
                         <div class=" study__hour__box study__hour__today">
-                            <div class="study__hour__subheading">Today</div>
-                            <div class="study__hour__number">number</div>
-                            <div class="study__hour__unit">hour</div>
+                            <div class="study__hour__container">
+                                <div class="study__hour__subheading">Today</div>
+                                <div class="study__hour__number">3</div>
+                                <div class="study__hour__unit">hour</div>
+                            </div>
                         </div>
                         <div class="study__hour__box study__hour__month">
-                            <div class="study__hour__subheading">Today</div>
-                            <div class="study__hour__number">number</div>
-                            <div class="study__hour__unit">hour</div>
+                            <div class="study__hour__container">
+                                <div class="study__hour__subheading">Today</div>
+                                <div class="study__hour__number">3</div>
+                                <div class="study__hour__unit">hour</div>
+                            </div>
                         </div>
                         <div class=" study__hour__box study__hour__total">
-                            <div class="study__hour__subheading">Today</div>
-                            <div class="study__hour__number">number</div>
-                            <div class="study__hour__unit">hour</div>
+                            <div class="study__hour__container">
+                                <div class="study__hour__subheading">Today</div>
+                                <div class="study__hour__number">3</div>
+                                <div class="study__hour__unit">hour</div>
+                            </div>
                         </div>
                     </div>
                     <!-- 学習時間のグラフ -->
