カレンダー表示を行いました

--- a/制作サイト/index1.html
+++ b/制作サイト/index1.html
@@ -34,17 +34,21 @@
             <div class="modal-close">×</div>
             <!-- モーダル内のコンテンツ -->
             <div class="modal-content">
-                <p>文章が入ります。</p>
                 <div class="upside">
                     <div class="modal__left">
-                        <div class="study__date">学習日</div>
+                        <div class="study__date">学習日
+                            <!-- 学習日カレンダー -->
+                            <div>
+                                <label class="date-edit"><input type="date" value="2019-08-22" /></label>
+                            </div>
+                        </div>
                         <div class="study__contents">学習コンテンツ(複数選択可)</div>
                         <div class="study__lang">学習言語(複数選択可)</div>
                     </div>
                     <div class="modal__right">
-                        <div class="study__time"></div>
-                        <div class="study__twitter__comment"></div>
-                        <div class="twitter__share"></div>
+                        <div class="study__time">学習時間</div>
+                        <div class="study__twitter__comment">Twitter用コメント</div>
+                        <div class="twitter__share">Twitterにシェアする</div>
                     </div>
                 </div>
                 <div class="bottomside">
