グラフ等の調整を行いました

--- a/制作サイト/index1.html
+++ b/制作サイト/index1.html
@@ -88,7 +88,7 @@
                 </div>
                 <div class="bottomside">
                     <div class="submit__button">
-                        記録・投稿
+                        <button class="button">記録・投稿</button>
                     </div>
                 </div>
             </div>
@@ -143,7 +143,15 @@
                             <canvas id="myDoughnutChart1">
                             </canvas>
                         </div>
-                        <div class="study__content__list">リスト部分</div>
+                        <div class="study__content__list">
+                            リスト部分
+                            <ul class="study__lang__list">
+                                <li><span></span> JavaScript</li>
+                                <li><span></span> CSS</li>
+                                <li><span></span> PHP</li>
+                                <li><span></span> HTML</li>
+                            </ul>
+                        </div>
                     </div>
                     <!-- 学習コンテンツのセクション -->
                     <div class=" contents__box study__contents">
