全体的な見た目以外のチェック項目は完成しました

--- a/制作サイト/index1.html
+++ b/制作サイト/index1.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <!-- メモ
-    まずは学習時間3項目の意図つの項目を完成させる。
+    ・まずは学習時間3項目の意図つの項目を完成させる。
     そのあとにほかの2つの項目に同様のCSSをきかせるあげればいい
+    ・モーダルウィンドウのリストタグにdisplay flexをかけたいがかけられない
 
 
 -->
@@ -95,6 +96,11 @@
                     <div class="submit__button">
                         <button class="button btn" id="twitter"   >
                             記録・投稿</button>
+                        <div class="load__complete__box">
+                                <div class="load__complete__content">
+                                    記録・投稿が完了しました
+                                </div>
+                        </div>
                     </div>
                 </div>
             </div>
