--- a/制作サイト/index1.html
+++ b/制作サイト/index1.html
@@ -12,6 +12,7 @@
     ・まずは学習時間3項目の意図つの項目を完成させる。
     そのあとにほかの2つの項目に同様のCSSをきかせるあげればいい
     ・モーダルウィンドウのリストタグにdisplay flexをかけたいがかけられない
+    .ドーナツのパーセント表示のやり方がわからない
 
 
 -->
@@ -97,9 +98,12 @@
                         <button class="button btn" id="twitter"   >
                             記録・投稿</button>
                         <div class="load__complete__box">
-                                <div class="load__complete__content">
+                            <div class="load__complete__img__box">
+                                <img src="./assets/IMG_4908.jpg" alt="" class="load__complete__img" >
+                            </div>
+                            <div class="load__complete__content">
                                     記録・投稿が完了しました
-                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -187,6 +191,7 @@
     <!-- フッターここまで -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.bundle.min.js"></script>
+    
     <!-- datalabelsプラグインを呼び出す
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script> -->
     <script src="./script/common.js"></script>
