--- a/制作サイト/index1.html
+++ b/制作サイト/index1.html
@@ -47,16 +47,18 @@
                         </div>
                         <div class="study__contents">
                             学習コンテンツ(複数選択可)
-                            <div class="check__btn__list__box">
-                                <label class="ECM_CheckboxInput"><input class="ECM_CheckboxInput-Input" type="checkbox"><span class="ECM_CheckboxInput-DummyInput"></span><span class="ECM_CheckboxInput-LabelText">N予備校</span></label>
+                            <div class="list">
+                                <div class="check__btn__list__box">
+                                    <label class="ECM_CheckboxInput"><input class="ECM_CheckboxInput-Input" type="checkbox"><span class="ECM_CheckboxInput-DummyInput"></span><span class="ECM_CheckboxInput-LabelText">N予備校</span></label>
+                                </div>
+                                <div class="check__btn__list__box">
+                                    <label class="ECM_CheckboxInput"><input class="ECM_CheckboxInput-Input" type="checkbox"><span class="ECM_CheckboxInput-DummyInput"></span><span class="ECM_CheckboxInput-LabelText">N予備校</span></label>
+                                </div>
+                                <div class="check__btn__list__box">
+                                    <label class="ECM_CheckboxInput"><input class="ECM_CheckboxInput-Input" type="checkbox"><span class="ECM_CheckboxInput-DummyInput"></span><span class="ECM_CheckboxInput-LabelText">N予備校</span></label>
+                                </div>
+                                                        </div>
                             </div>
-                            <div class="check__btn__list__box">
-                                <label class="ECM_CheckboxInput"><input class="ECM_CheckboxInput-Input" type="checkbox"><span class="ECM_CheckboxInput-DummyInput"></span><span class="ECM_CheckboxInput-LabelText">N予備校</span></label>
-                            </div>
-                            <div class="check__btn__list__box">
-                                <label class="ECM_CheckboxInput"><input class="ECM_CheckboxInput-Input" type="checkbox"><span class="ECM_CheckboxInput-DummyInput"></span><span class="ECM_CheckboxInput-LabelText">N予備校</span></label>
-                            </div>
-                        </div>
                         <div class="study__lang">学習言語(複数選択可)</div>
                         <div class="check__btn__list__box">
                             <label class="ECM_CheckboxInput"><input class="ECM_CheckboxInput-Input" type="checkbox"><span class="ECM_CheckboxInput-DummyInput"></span><span class="ECM_CheckboxInput-LabelText">HTML</span></label>
