--- a/制作サイト/index1.html
+++ b/制作サイト/index1.html
@@ -7,6 +7,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="./style/reset.css">
     <link rel="stylesheet" href="./style/style.css">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.bundle.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels" defer></script>
+    <script src="./script/main.js" defer></script>
+    <script src="./script/common.js" defer></script>
 </head>
 <!-- メモ
     ・まずは学習時間3項目の意図つの項目を完成させる。
@@ -47,7 +52,7 @@
                         </div>
                         <div class="study__contents">
                             学習コンテンツ(複数選択可)
-                            <div class="list">
+                            <div class="che">
                                 <div class="check__btn__list__box">
                                     <label class="ECM_CheckboxInput"><input class="ECM_CheckboxInput-Input" type="checkbox"><span class="ECM_CheckboxInput-DummyInput"></span><span class="ECM_CheckboxInput-LabelText">N予備校</span></label>
                                 </div>
@@ -162,7 +167,6 @@
                             </canvas>
                         </div>
                         <div class="study__content__list">
-                            リスト部分
                             <ul class="study__lang__list">
                                 <li><span></span> JavaScript</li>
                                 <li><span></span> CSS</li>
@@ -191,12 +195,11 @@
         <p>2020年10月</p>
     </footer>
     <!-- フッターここまで -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.3.0/Chart.bundle.min.js"></script>
     
-    <!-- datalabelsプラグインを呼び出す
-    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
     <script src="./script/common.js"></script>
-    <script src="./script/main.js"></script>
+    <script src="./script/main.js"></script> -->
 </body>
 </html>
